[BUGFIX] Fix Settings.yaml (syntax error)
Change-Id: Ieed36ce20e376b92a701a5e1ecd0aa7f4071bcf2

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -4,4 +4,4 @@ TechDivision:
       defaultMaximumAge: 60
       defaultSharedMaximumAge: 31536000
 
-    spiderIndexingPathAndFilename: %FLOW_PATH_DATA%Temporary/VarnishSpider.txt
+    spiderIndexingPathAndFilename: '%FLOW_PATH_DATA%Temporary/VarnishSpider.txt'
